force-app/main/default/objects/Cancellation_Refund_POE__c/Cancellation_Refund_POE__c.object-meta.xml
<CustomObject>
    <label>Cancellation/Refund</label>
    <nameField>
        <displayFormat>CanRef-{00000}</displayFormat>
        <label>Cancelation/Refund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>