force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF( (ordexp_tad_order__r.RecordType.Name = &apos;TAD&apos; || ordexp_tad_order__r.RecordType.Name = &apos;TNZ&apos;),ordexp_tad_order__r.Account_Name__c,   ordexp_tad_order__r.Agency_Id__r.FirstName &amp;&quot; &quot;&amp;  ordexp_tad_order__r.Agency_Id__r.LastName  )</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>