force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Documentation</fullName>
            </value>
            <value>
                <fullName>Pending CS Approval</fullName>
            </value>
            <value>
                <fullName>CS Approved</fullName>
            </value>
            <value>
                <fullName>CS Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Finance Approval</fullName>
            </value>
            <value>
                <fullName>Finance Approved</fullName>
            </value>
            <value>
                <fullName>Finance Rejected</fullName>
            </value>
            <value>
                <fullName>More Information Required by Finance</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Approved-Refund Not Processed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Approved-Not Processed</fullName>
                <isActive>false</isActive>
                <label>Approved - Refund Not Processed</label>
            </value>
            <value>
                <fullName>Not Approved</fullName>
                <isActive>false</isActive>
                <label>Not Approved</label>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
                <isActive>false</isActive>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted and Pending</fullName>
                <isActive>false</isActive>
                <label>Submitted and Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>