force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Approved_Status__c.field-meta.xml
<CustomField>
    <fullName>Approved_Status__c</fullName>
    <label>Approved Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>