force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Cancellation_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Type__c</fullName>
    <label>Cancellation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Departure date change</fullName>
            </value>
            <value>
                <fullName>Departure city change</fullName>
            </value>
            <value>
                <fullName>Refund No Cancellation</fullName>
            </value>
            <value>
                <fullName>Refund without Cancellation</fullName>
                <isActive>false</isActive>
                <label>Refund without Cancellation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>