force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Cancelled_Records_Information__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Records_Information__c</fullName>
    <label>Cancelled Records Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>