force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Coupon_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Name_Formula__c</fullName>
    <formula>MID( Id , 10, 6)+ ordexp_tad_order__r.ordexp_account__r.LastName</formula>
    <label>Coupon Name Formula</label>
    <type>Text</type>
</CustomField>