force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Coupon_Withheld_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Withheld_Amount__c</fullName>
    <label>Coupon Withheld Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>