force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>