force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Customer_Accepts__c.field-meta.xml
<CustomField>
    <fullName>Customer_Accepts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Accepts</label>
    <type>Checkbox</type>
</CustomField>