force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Deal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Deal_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Transaction</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Deal_Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Deal_Transaction__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations_POE</relationshipName>
    <type>Lookup</type>
</CustomField>