force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TCXL + NO RF: Tour cancellation and no refund</fullName>
            </value>
            <value>
                <fullName>VCXL + RI: Voucher cancellation and reissue</fullName>
            </value>
            <value>
                <fullName>NO VCXL + DUP: Voucher cancellation due to duplication</fullName>
            </value>
            <value>
                <fullName>VCXL + CR  - Voucher cancelled and a credit up to the same value of purchase offered</fullName>
            </value>
            <value>
                <fullName>NO CXL + CR - No cancellation + credit: when their tour is NOT CANCELLED but they receive a partial credit</fullName>
            </value>
            <value>
                <fullName>TCXL + CR: TripADeal&apos;s decision to cancel tour and credit</fullName>
            </value>
            <value>
                <fullName>TCXL + RF: Tour cancellation and refund</fullName>
            </value>
            <value>
                <fullName>NO CXL + RF: No cancellation + refund</fullName>
            </value>
            <value>
                <fullName>VCXL + RF: When the customer has made an incorrect payment or purchased incorrectly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>