force-app/main/default/objects/Cancellation_Refund_POE__c/fields/FF_status_Batch__c.field-meta.xml
<CustomField>
    <fullName>FF_status_Batch__c</fullName>
    <formula>ordexp_tad_order__r.FF_status_Batch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FF status Batch</label>
    <type>Text</type>
</CustomField>