force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Finance_More_Information_Required__c.field-meta.xml
<CustomField>
    <fullName>Finance_More_Information_Required__c</fullName>
    <label>Finance More Information Required</label>
    <type>TextArea</type>
</CustomField>