force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Hotel_Room_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Room_Cancellation_Amount__c</fullName>
    <formula>Room_Cancellation_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel/Room Cancellation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>