force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Hotel_Room_Coupon_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Room_Coupon_Received_Amount__c</fullName>
    <formula>Tad_Booking_Hotel__r.ordexp_Coupon_Payment_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel/Room Coupon Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>