force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Hotel_Room_Payment_Without_QFF__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Room_Payment_Without_QFF__c</fullName>
    <formula>Tad_Booking_Hotel__r.Total_Payment_Received_Without_QFF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel/Room Payment Without QFF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>