force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Is_QFF_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Is_QFF_Payment_Received__c</fullName>
    <formula>Tad_Booking_Hotel__r.QFF_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is QFF Payment Received</label>
    <type>Checkbox</type>
</CustomField>