force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Link_to_OLI_AddOn__c.field-meta.xml
<CustomField>
    <fullName>Link_to_OLI_AddOn__c</fullName>
    <formula>IF( ISPICKVAL( Linked_to_OLI_AddOn__c , &apos;OLI&apos;) ,HYPERLINK(
  &quot;/&quot; &amp;  OLI_AddOn_Id__c , 
  &quot;OLI&quot;,
  &quot;_self&quot;
), HYPERLINK(
  &quot;/&quot; &amp; OLI_AddOn_Id__c, 
  &quot;AddOn&quot;,
  &quot;_self&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to OLI/AddOn</label>
    <type>Text</type>
</CustomField>