force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Linked_to_OLI_AddOn__c.field-meta.xml
<CustomField>
    <fullName>Linked_to_OLI_AddOn__c</fullName>
    <label>Linked to OLI/AddOn ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OLI</fullName>
            </value>
            <value>
                <fullName>AddOn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>