force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Nett_Hotel_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Nett_Hotel_Cancellation_Amount__c</fullName>
    <formula>Tad_Booking_Hotel__r.Room_Cancellation_Amont__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nett Hotel Cancellation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>