force-app/main/default/objects/Cancellation_Refund_POE__c/fields/OLI_AddOn_Id__c.field-meta.xml
<CustomField>
    <fullName>OLI_AddOn_Id__c</fullName>
    <label>OLI/AddOn Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>