force-app/main/default/objects/Cancellation_Refund_POE__c/fields/OrderUrl__c.field-meta.xml
<CustomField>
    <fullName>OrderUrl__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +  ordexp_tad_order__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderUrl</label>
    <type>Text</type>
</CustomField>