force-app/main/default/objects/Cancellation_Refund_POE__c/fields/ordexp_tad_order__c.field-meta.xml
<CustomField>
    <fullName>ordexp_tad_order__c</fullName>
    <label>TAD Order</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations_POE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>