force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Transaction POE</label>
    <referenceTo>Payment_Transaction_POE__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>