force-app/main/default/objects/Cancellation_Refund_POE__c/fields/QFF_Refund__c.field-meta.xml
<CustomField>
    <fullName>QFF_Refund__c</fullName>
    <label>QFF Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>