force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Refund_Details__c.field-meta.xml
<CustomField>
    <fullName>Refund_Details__c</fullName>
    <description>created For PBP-294(Details for Refund)</description>
    <label>Refund Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>