force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Refund_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Refund_to_Name__c</fullName>
    <label>Refund to Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>