force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Request_finance_approval__c.field-meta.xml
<CustomField>
    <fullName>Request_finance_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request finance approval</label>
    <type>Checkbox</type>
</CustomField>