force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Room_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Room_Cancellation_Amount__c</fullName>
    <label>Room Cancellation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>