force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Send_Email_to__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_to__c</fullName>
    <description>Send Refund without cancellation Notification to this Email</description>
    <label>Send Email to</label>
    <type>Email</type>
</CustomField>