force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Tad_Booking_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Tad_Booking_Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Hotel</label>
    <referenceTo>Booking_Hotel__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>