force-app/main/default/objects/Cancellation_Refund_POE__c/fields/TAD_Order_Name__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order_Name__c</fullName>
    <formula>ordexp_tad_order__r.Name</formula>
    <label>TAD Order Name</label>
    <type>Text</type>
</CustomField>