force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Total_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Cancellation_Amount__c</fullName>
    <formula>Coupon_Amount__c+Refund_Amount__c+Credit_Amount__c + QFF_Refund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cancellation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>