force-app/main/default/objects/Cancellation_Refund_POE__c/fields/Total_Cancellation_Amount_text__c.field-meta.xml
<CustomField>
    <fullName>Total_Cancellation_Amount_text__c</fullName>
    <formula>IF(  ISPICKVAL(CurrencyIsoCode, &quot;NZD&quot;), &quot;NZD &quot; +  TEXT(Total_Cancellation_Amount__c) +&quot; ( AUD &quot;+ TEXT(Total_Cancellation_Amount__c/CURRENCYRATE(TEXT(CurrencyIsoCode))) +&quot;)&quot; ,
 &quot;AUD &quot;+  TEXT(Total_Cancellation_Amount__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cancellation Amount</label>
    <type>Text</type>
</CustomField>