force-app/main/default/objects/Cancellation_Refund_POE__c/validationRules/Validate_if_Payment_Transaction_Order_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_if_Payment_Transaction_Order_Id</fullName>
    <active>true</active>
    <errorConditionFormula>(Payment_Transaction__c != null)  &amp;&amp;  (Payment_Transaction__r.ordexp_tad_order__c !=  ordexp_tad_order__c )</errorConditionFormula>
    <errorMessage>Payment Transaction and Cancellation Tad Order ID doesn&apos;t match</errorMessage>
</ValidationRule>