force-app/main/default/objects/Cancellation_Refund_POE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cancellation_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Refund_Amount__c</columns>
    <columns>Coupon_Amount__c</columns>
    <columns>Withheld_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>