force-app/main/default/objects/Cancellation_Refund_POE__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Cancellation_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Refund_Amount__c</columns>
    <columns>Coupon_Amount__c</columns>
    <columns>Withheld_Amount__c</columns>
    <columns>Cancelled_Records_Information__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>